--- a/index.html
+++ b/index.html
@@ -23,5 +23,14 @@
     <div id="playerDisplay">PLAYER SELECTED: </div>
     <div id="computerDisplay">COMPUTER SELECTED: </div>
     <div id="resultDisplay"></div>
+
+
+    <div class="scoreDisplay">PLAYER SCORE:
+        <span id="playerScoreDisplay">0</span>
+    </div>
+    <div class="scoreDisplay">COMPUTER SCORE:
+        <span id="computerScoreDisplay">0</span>
+    </div>
+
 </body>
 </html>
